--- a/src/components/Person.scss
+++ b/src/components/Person.scss
@@ -1,3 +1,8 @@
 .Person {
+  background-image: url('smiley.png');
+  background-repeat: no-repeat;
+  background-position: 4px center;
+  background-size: auto 90%;
   background-color: white;
+  padding-left: 36px;
 }
