--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
+$font-stack: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,5 +13,5 @@ html, body {
   position: relative;
   height: 100%;
   min-height: 100%;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: $font-stack;
 }
