--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-$font-stack: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$font-stack: (Arial, 'Helvetica Neue', Helvetica, sans-serif);
 
 * {
   box-sizing: border-box;
