--- a/src/main.scss
+++ b/src/main.scss
@@ -1,17 +1,28 @@
-$font-stack: (Arial, 'Helvetica Neue', Helvetica, sans-serif);
+@charset 'UTF-8';
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-*:before,
-*:after {
-  box-sizing: border-box;
-}
+// 1. Configuration and helpers
+// No global Sass context, as suggested by http://bensmithett.com/smarter-css-builds-with-webpack/
+// Only import what is strictly needed
 
-html, body {
-  position: relative;
-  height: 100%;
-  min-height: 100%;
-  font-family: $font-stack;
-}
+// 2. Vendors
+@import
+  'stylesheets/vendor/normalize.css';
+
+// 3. Base stuff
+@import
+  'stylesheets/base/base',
+  'stylesheets/base/typography',
+  'stylesheets/base/helpers';
+
+// 4. Layout-related sections
+@import
+  'stylesheets/layout/header',
+  'stylesheets/layout/footer';
+
+// 5. Components
+
+// 6. Page-specific styles
+
+// 7. Themes
+@import
+  'stylesheets/themes/default';
