--- a/src/stylesheets/themes/_default.scss
+++ b/src/stylesheets/themes/_default.scss
@@ -1,3 +1,9 @@
+html, body {
+  position: relative;
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   background-color: green;
 }
@@ -5,4 +11,6 @@ body {
 // override _helpers.scss
 .container {
   background-color: yellow;
+  height: 100%;
+  min-height: 100%;
 }
