--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,15 @@
-@charset 'UTF-8';
+@charset "UTF-8";
+
+/*
+ * Organizing SASS / CSS
+ * See: http://sass-guidelin.es/#the-7-1-pattern
+ * See: https://github.com/HugoGiraudel/sass-boilerplate/tree/master/stylesheets
+ *
+ * No global Sass context, as suggested by http://bensmithett.com/smarter-css-builds-with-webpack/
+ * Only import what is strictly needed
+ */
 
 // 1. Configuration and helpers
-// No global Sass context, as suggested by http://bensmithett.com/smarter-css-builds-with-webpack/
-// Only import what is strictly needed
 
 // 2. Vendors
 @import
